tests/errors/generic_field_unbound_type_var.dang
type Bad[a] {
  pub value: b
}
